# nedots

./: README.md  nedots  nedots.json  workspace.code-workspace
etc/NetworkManager/conf.d/: 10-unmanaged-devices.conf
etc/X11/xorg.conf.d/: 00-keyboard.conf  10-outputs.conf  20-inputs.conf
etc/lightdm/: lightdm.conf  slick-greeter.conf
etc/systemd/system/: liquidctl.service
home/aiden/: .Xresources  .bashrc  .fedora.upn  .gitconfig  .gtkrc-2.0  .nanorc  .xsettingsd
home/aiden/.config/: mimeapps.list
home/aiden/.config/alacritty/: alacritty.yml
home/aiden/.config/alacritty/alacritty/: alacritty.yml
home/aiden/.config/bspwm/: bspwmrc  desktop_rules  external_rules  node_add_rules
home/aiden/.config/dunst/: dunstrc
home/aiden/.config/fish/: .gitignore  config.fish
home/aiden/.config/gtk-2.0/: gtkfilechooser.ini
home/aiden/.config/gtk-3.0/: bookmarks  settings.ini
home/aiden/.config/htop/: htoprc
home/aiden/.config/nitrogen/: bg-saved.cfg  nitrogen.cfg
home/aiden/.config/picom/: picom.conf
home/aiden/.config/polybar/: config  config.ini
home/aiden/.config/qt5ct/: qt5ct.conf
home/aiden/.config/spotifyd/: spotifyd.conf
home/aiden/.config/sxhkd/: sxhkdrc
installer/: .gitignore  Cargo.toml  nedots.example.json  nedots.json
installer.py/: nedots.json
installer.py/src/: nedots.py
installer/src/: add.rs  args.rs  cli.rs  config.rs  copy.rs  git.rs  install.rs  logger.rs  main.rs  proc.rs  sanity_checks.rs  settings.rs  utils.rs
installer/src/add/: git.rs
installer/src/add/git/: add.rs  operations.rs
installer/src/git/: operations.rs
installer/src/ops/: fs.rs  git.rs  mod.rs  op.rs
installer/src/output/: logger.rs  mod.rs  terminal.rs  verbosity.rs
installer/tests/: nedots.test.json
symlinks/etc/NetworkManager/conf.d/: 10-unmanaged-devices.conf
symlinks/etc/X11/xorg.conf.d/: 10-outputs.conf  20-inputs.conf
symlinks/etc/systemd/system/: liquidctl.service
symlinks/etc/yum.repos.d/: 1password.repo  vscode.repo
symlinks/home/: .Xresources  .bashrc  .fedora.upn  .gitconfig  .gtkrc-2.0  .gtkrc-2.0.mine  .nanorc  .profile  .xsettingsd
symlinks/home/.config/: mimeapps.list
(+124 files in other folders)
